--- a/values.yaml
+++ b/values.yaml
@@ -2,3 +2,27 @@
 
 globex:
   namespace: globex
+
+securityContext:
+  fsGroup: 1000
+  runAsUser: 1000
+  runAsNonRoot: true
+
+resources:
+  requests:
+    memory: "512Mi"
+    cpu: "100m"
+  limits:
+    memory: "1Gi"
+    cpu: "500m"
+
+persistence:
+  enabled: true
+  storageClass: "ocs-storagecluster-ceph-rbd"  # Use your available storage class
+  accessMode: ReadWriteOnce
+  size: 10Gi
+
+route:
+  enabled: true
+  annotations: {}
+  path: /
